[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c11204ps"
dynamic = ["version"]
description = 'Python package for controlling a Hamamatsu c11204-01/02 power supply.'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-only"
keywords=["hamamatsu", "power supply", "c11204", "c11204-01", "c11204-02"]
authors = [
  { name = "burbschat", email = "b.urbschat@tum.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pySerial"]

[project.urls]
Documentation = "https://github.com/burbschat/c11204ps#readme"
Issues = "https://github.com/burbschat/c11204ps/issues"
Source = "https://github.com/burbschat/c11204ps"

[tool.hatch.version]
path = "src/c11204ps/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/c11204ps}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 130
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 130
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["c11204ps"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
source_pkgs = ["c11204ps"]
branch = true
parallel = true
omit = [
  "src/c11204ps/__about__.py",
]

[tool.coverage.paths]
c11204ps = ["src/c11204ps", "*/c11204ps/src/c11204ps"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
